<resources>
    <string name="app_name">SiPresGu</string>
    <!-- URL Server Hosting SiPresGu -->
    <string name="default_server_url">https://sipresgu.web.id/</string>
    
    <string name="error_offline_title">Koneksi Terputus</string>
    <string name="error_offline_desc">Tidak dapat terhubung ke server SiPresGu. Pastikan koneksi internet aktif dan server dapat diakses.</string>
    <string name="btn_retry">Coba Lagi</string>
    <string name="btn_settings">Atur URL Server</string>
    <string name="dialog_url_title">Pengaturan URL Server</string>
    <string name="dialog_url_hint">https://sipresgu.web.id/</string>
    <string name="btn_save">Simpan &amp; Muat Ulang</string>
    <string name="btn_cancel">Batal</string>
    <string name="url_saved">URL Server berhasil disimpan</string>
    <string name="invalid_url">Format URL tidak valid (harus diawali http:// atau https://)</string>
    
    <string name="perm_location_title">Izin Lokasi (GPS)</string>
    <string name="perm_location_desc">Aplikasi ini membutuhkan akses GPS untuk memverifikasi radius lokasi presensi guru.</string>
    <string name="perm_camera_title">Izin Kamera</string>
    <string name="perm_camera_desc">Aplikasi ini membutuhkan akses kamera untuk pengambilan foto selfie presensi.</string>
</resources>
